--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,8 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-navigations {
@@ -85,6 +87,27 @@ img {
   color: #2e2f42;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
+.header-menu-link::after {
+  content: "";
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background: #404bbf;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link:hover::after,
+.header-menu-link:focus::after,
+.header-menu-link.header-link::after {
+  opacity: 1;
 }
 
 .header-contacts {
@@ -113,7 +136,8 @@ img {
 .header-menu-link:hover,
 .header-menu-link:focus,
 .header-contacts-link:hover,
-.header-contacts-link:focus {
+.header-contacts-link:focus,
+.header-menu-link.header-link {
   color: #404bbf;
 }
 
@@ -212,7 +236,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  margin: 0 auto;
+  margin-top: 8px;
   margin-bottom: 8px;
 }
 
