--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ img {
   color: #434455;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
@@ -145,13 +146,18 @@ img {
 
 .hero {
   background: #2e2f42;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7)),
-    url("../images/people-office.jpg");
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   max-width: 1440px;
   margin: 0 auto;
   background-repeat: no-repeat;
   padding-top: 188px;
   padding-bottom: 188px;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-container {
@@ -218,7 +224,10 @@ img {
   padding-bottom: 120px;
 }
 
-.characteristic-icons {
+.characteristic-icons-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   width: 264px;
@@ -228,6 +237,12 @@ img {
   padding-bottom: 24px;
   padding-left: 100px;
   padding-right: 100px;
+  margin-bottom: 8px;
+}
+
+.characteristic-icons {
+  width: 64px;
+  height: 64px;
 }
 
 .characteristic-subtitle {
@@ -265,6 +280,10 @@ img {
   padding: 120px 0;
 }
 
+.team-part {
+  padding: 32px 0;
+}
+
 .team-item-icon {
   fill: #f4f4fd;
   width: 16px;
@@ -300,6 +319,12 @@ img {
   margin-bottom: 8px;
 }
 
+.team-icons-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
 .team-icon-link {
   display: flex;
   align-items: center;
@@ -308,6 +333,16 @@ img {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
+}
+
+.icons-team-svg {
+  height: 100%;
+  width: 100%;
+  background-color: #4d5ae5;
+}
+
+.icons-link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icons {
@@ -390,13 +425,11 @@ img {
   left: 0;
   color: #f4f4fd;
   background-color: #4d5ae5;
-  padding-top: 40px;
-  padding-bottom: 164px;
-  padding-left: 32px;
-  padding-right: 32px;
   height: 100%;
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.5;
+  padding: 40px 32px;
 }
 
 .portfolio-item:hover {
@@ -457,19 +490,19 @@ img {
   padding-top: 100px;
 }
 
-.footer-icons {
-  margin-left: 120px;
-}
-
-.footer-icons-item {
-  width: 40px;
-  height: 40px;
+.container-footer {
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px;
 }
 
 .footer-icons-list {
   display: flex;
   gap: 16px;
+  width: 100%;
+  height: 100%;
   margin-left: 120px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-text {
