--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,8 @@ img {
 
 /*-------MAIN-------*/
 
+/*-------hero-------*/
+
 .hero {
   background: #2e2f42;
   background-image: linear-gradient(
@@ -205,6 +207,8 @@ img {
 .hero-btn:focus {
   background-color: #404bbf;
 }
+
+/*-------characteristic-------*/
 
 .visually-hidden {
   position: absolute;
@@ -275,19 +279,11 @@ img {
   width: calc((100% - 72px) / 4);
 }
 
+/*-------team-------*/
+
 .team {
   background-color: #f4f4fd;
   padding: 120px 0;
-}
-
-.team-part {
-  padding: 32px 0;
-}
-
-.team-item-icon {
-  fill: #f4f4fd;
-  width: 16px;
-  height: 16px;
 }
 
 .team-title {
@@ -300,64 +296,6 @@ img {
   text-align: center;
   color: #2e2f42;
   margin: 0 auto 72px;
-}
-
-.team-part {
-  margin-top: 32px;
-}
-
-.team-subtitle {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 8px;
-  text-align: center;
-  margin-bottom: 8px;
-}
-
-.team-icons-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-
-.team-icon-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #4d5ae5;
-}
-
-.icons-team-svg {
-  height: 100%;
-  width: 100%;
-  background-color: #4d5ae5;
-}
-
-.icons-link {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-icons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 24px;
-  margin-top: 8px;
-  margin-bottom: 32px;
-  padding-right: 16px;
-  padding-left: 16px;
-}
-
-.team-icons .team-icon-link:hover {
-  background-color: #31d0aa;
 }
 
 .team-list {
@@ -373,10 +311,22 @@ img {
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.team-item-icon {
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.team-part {
+  margin-top: 32px;
+  padding: 32px 0;
+}
+
+.team-subtitle {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+  text-align: center;
+  margin-bottom: 8px;
 }
 
 .team-desc {
@@ -388,6 +338,64 @@ img {
   color: #434455;
   text-align: center;
 }
+
+.team-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+  margin-bottom: 32px;
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
+.team-icons-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icons-link {
+  width: 40px;
+  height: 40px;
+}
+
+.team-icon-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--color, #4d5ae5);
+}
+
+.team-icon-link:hover,
+.team-icon-link:focus {
+  background-color: #404bbf;
+}
+
+.team-item-icon {
+  fill: #f4f4fd;
+  width: 16px;
+  height: 16px;
+}
+
+.team-item-icon {
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icons-team-svg {
+  height: 100%;
+  width: 100%;
+  background-color: #4d5ae5;
+}
+
+/*-------portfolio-------*/
 
 .portfolio {
   padding-top: 120px;
@@ -430,6 +438,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 1.5;
   padding: 40px 32px;
+  letter-spacing: 0.02em;
 }
 
 .portfolio-item:hover {
@@ -452,6 +461,7 @@ img {
   flex-wrap: wrap;
   gap: 24px;
   row-gap: 48px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-desc {
@@ -477,6 +487,15 @@ img {
   display: flex;
 }
 
+.container-footer {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-logo-container {
+  margin-right: 120px;
+}
+
 .footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -488,33 +507,6 @@ img {
   display: inline-block;
   margin-bottom: 16px;
   padding-top: 100px;
-}
-
-.container-footer {
-  display: flex;
-  align-items: baseline;
-  margin-right: 120px;
-}
-
-.footer-icons-list {
-  display: flex;
-  gap: 16px;
-  width: 100%;
-  height: 100%;
-  margin-left: 120px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-text {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #fff;
-  padding-top: 100px;
-  margin-bottom: 16px;
-  margin-left: 120px;
 }
 
 .footer-logo-studio {
@@ -530,18 +522,48 @@ img {
   max-width: 264px;
 }
 
+.footer-text-media {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color, #ffffff);
+  padding-top: 100px;
+  margin-bottom: 16px;
+  margin-left: 120px;
+}
+
+.footer-icons-list {
+  display: flex;
+  gap: 16px;
+  width: 100%;
+  height: 100%;
+  margin-left: 120px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icons-item {
+  height: 40px;
+  width: 40px;
+}
+
 .footer-icons-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
 }
 
+.footer-icons-link:hover,
+.footer-icons-link:focus {
+  background-color: #31d0aa;
+}
+
 .footer-icon {
-  fill: #f4f4fd;
+  fill: var(--color, #f4f4fd);
   width: 24px;
   height: 24px;
 }
