--- a/css/styles.css
+++ b/css/styles.css
@@ -358,6 +358,7 @@ img {
 }
 
 .icons-link {
+  display: flex;
   width: 40px;
   height: 40px;
 }
@@ -366,19 +367,21 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 24px;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: var(--color, #4d5ae5);
+  background-color: var(--colors, #4d5ae5);
 }
 
 .team-icon-link:hover,
 .team-icon-link:focus {
+  background-color: var(--colors, #4d5ae5);
   background-color: #404bbf;
 }
 
 .team-item-icon {
-  fill: #f4f4fd;
+  fill: var(--paint, #f4f4fd);
   width: 16px;
   height: 16px;
 }
@@ -416,6 +419,7 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .portfolio-item-text {
@@ -461,7 +465,6 @@ img {
   flex-wrap: wrap;
   gap: 24px;
   row-gap: 48px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-desc {
@@ -520,6 +523,7 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+  margin-bottom: 16px;
 }
 
 .footer-text-media {
@@ -540,11 +544,13 @@ img {
   height: 100%;
   margin-left: 120px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons-item {
   height: 40px;
   width: 40px;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons-link {
