--- a/css/styles.css
+++ b/css/styles.css
@@ -534,6 +534,7 @@ img {
   color: var(--color, #ffffff);
   padding-top: 100px;
   margin-bottom: 16px;
+  margin-top: 16px;
   margin-left: 120px;
 }
 
@@ -543,14 +544,12 @@ img {
   width: 100%;
   height: 100%;
   margin-left: 120px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons-item {
   height: 40px;
   width: 40px;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons-link {
