--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,7 @@ img {
   height: 100%;
   border-radius: 50%;
   background-color: var(--colors, #4d5ae5);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-link:hover,
@@ -505,10 +506,10 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
-  margin-bottom: 16px;
+  padding-bottom: 100px;
 }
 
-.footer-text-media {
+.footer-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -516,7 +517,6 @@ img {
   color: var(--color, #ffffff);
   padding-top: 100px;
   margin-bottom: 16px;
-  margin-left: 120px;
 }
 
 .footer-icons-list {
@@ -524,13 +524,17 @@ img {
   gap: 16px;
   width: 100%;
   height: 100%;
-  margin-left: 120px;
+  padding-bottom: 132px;
 }
 
 .footer-icons-item {
   height: 40px;
   width: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icons {
+  margin-left: 120px;
 }
 
 .footer-icons-link {
@@ -541,6 +545,7 @@ img {
   height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons-link:hover,
