--- a/css/styles.css
+++ b/css/styles.css
@@ -359,18 +359,18 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: var(--colors, #4d5ae5);
+  background-color: var(--iris, #4d5ae5);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-link:hover,
 .team-icon-link:focus {
-  background-color: var(--colors, #4d5ae5);
+  background-color: var(--iris, #4d5ae5);
   background-color: #404bbf;
 }
 
 .team-item-icon {
-  fill: var(--paint, #f4f4fd);
+  fill: var(--cloud, #f4f4fd);
   width: 16px;
   height: 16px;
 }
@@ -512,7 +512,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--color, #ffffff);
+  color: var(--white, #ffffff);
   margin-bottom: 16px;
 }
 
@@ -546,7 +546,7 @@ img {
 }
 
 .footer-icon {
-  fill: var(--color, #f4f4fd);
+  fill: var(--cloud, #f4f4fd);
   width: 24px;
   height: 24px;
 }
